--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "台州严选",
+    "navigationBarTitleText": "通用小程序",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": true
   },
